--- a/OpenCurate/ViewController/Home/CollectionViewCells/DepartmentCollectionViewCell.xib
+++ b/OpenCurate/ViewController/Home/CollectionViewCells/DepartmentCollectionViewCell.xib
@@ -20,20 +20,25 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ykD-YU-cyB">
                         <rect key="frame" x="0.0" y="0.0" width="215" height="86"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z4f-Qj-2mG">
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z4f-Qj-2mG">
                                 <rect key="frame" x="8" y="8" width="199" height="70"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="z4f-Qj-2mG" secondAttribute="trailing" constant="8" id="CXI-kn-2Xd"/>
                             <constraint firstItem="z4f-Qj-2mG" firstAttribute="top" secondItem="ykD-YU-cyB" secondAttribute="top" constant="8" id="Udl-M3-hcf"/>
                             <constraint firstAttribute="bottom" secondItem="z4f-Qj-2mG" secondAttribute="bottom" constant="8" id="uIK-6C-ir4"/>
                             <constraint firstItem="z4f-Qj-2mG" firstAttribute="leading" secondItem="ykD-YU-cyB" secondAttribute="leading" constant="8" id="vEM-yc-wLk"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
             </view>
@@ -52,8 +57,8 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
