Fetch art object details from DepartmentObjTableView

--- a/OpenCurate/View/Base.lproj/Main.storyboard
+++ b/OpenCurate/View/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -176,10 +175,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="nSt-OG-ZOh">
                         <barButtonItem key="leftBarButtonItem" title="Logo" style="done" id="D24-hl-RIn"/>
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="rH9-KC-j0L">
-                            <imageReference key="image" image="magnifyingglass" catalog="system" symbolScale="large"/>
-                            <color key="tintColor" systemColor="labelColor"/>
-                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="departmentCollectionView" destination="GpU-hr-m5l" id="Efh-27-eCe"/>
@@ -258,10 +253,40 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Department Name" id="0Je-41-6Dr"/>
+                    <connections>
+                        <segue destination="KPh-dd-YqM" kind="show" identifier="artDepartmentSegue" id="zBR-2r-9gm"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Aja-ei-MS0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="6045" y="-1797"/>
+        </scene>
+        <!--Art Name-->
+        <scene sceneID="dLT-WA-vTN">
+            <objects>
+                <viewController id="KPh-dd-YqM" customClass="ArtDepartmentViewController" customModule="OpenCurate" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uaO-6E-fa7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vIn-Gk-wET">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="d4L-1Z-fpw"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vIn-Gk-wET" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" id="Afd-ke-Gfn"/>
+                            <constraint firstItem="vIn-Gk-wET" firstAttribute="top" secondItem="d4L-1Z-fpw" secondAttribute="top" id="bTo-vi-mpp"/>
+                            <constraint firstItem="d4L-1Z-fpw" firstAttribute="bottom" secondItem="vIn-Gk-wET" secondAttribute="bottom" id="lsR-Og-lmN"/>
+                            <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="vIn-Gk-wET" secondAttribute="trailing" id="oRf-g5-V5d"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Art Name" id="mmh-3m-DW8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c0i-Ne-msg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7038" y="-1797"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="WPH-b5-BEl">
@@ -462,14 +487,11 @@
             <point key="canvasLocation" x="3550.7246376811595" y="-1021.2053571428571"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="GalleryMap" width="734" height="563"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
-        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
