--- a/OpenCurate/View/Base.lproj/Main.storyboard
+++ b/OpenCurate/View/Base.lproj/Main.storyboard
@@ -269,18 +269,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUU-Vj-nJ9">
-                                <rect key="frame" x="20" y="98" width="374" height="32"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="View Art">
-                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="baseBackgroundColor" systemColor="systemOrangeColor"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="viewArtButton:" destination="KPh-dd-YqM" eventType="touchUpInside" id="oTq-eR-j4g"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvA-xs-b7O">
                                 <rect key="frame" x="10" y="155" width="394" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
@@ -353,6 +341,18 @@
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUU-Vj-nJ9">
+                                <rect key="frame" x="20" y="666" width="374" height="32"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="View Art">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseBackgroundColor" systemColor="systemOrangeColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="viewArtButton:" destination="KPh-dd-YqM" eventType="touchUpInside" id="oTq-eR-j4g"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="d4L-1Z-fpw"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -368,30 +368,30 @@
                             <constraint firstItem="xvA-xs-b7O" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="10" id="EyP-rf-u6D"/>
                             <constraint firstItem="6pL-qL-hR1" firstAttribute="top" secondItem="HFf-xG-oWK" secondAttribute="bottom" constant="20" id="GNy-AQ-DGL"/>
                             <constraint firstItem="jfm-aj-XIx" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="GxZ-Ol-ysa"/>
+                            <constraint firstItem="XUU-Vj-nJ9" firstAttribute="top" secondItem="7LH-oa-hDk" secondAttribute="bottom" constant="49.5" id="IBJ-OS-hEe"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="6pL-qL-hR1" secondAttribute="trailing" constant="20" id="Lwx-XH-WGt"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="MF1-vB-AZW" secondAttribute="trailing" constant="20" id="SYk-kn-gTa"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="GbK-ks-cT8" secondAttribute="trailing" constant="20" id="U88-tY-og5"/>
                             <constraint firstItem="MF1-vB-AZW" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="UHR-bx-wTC"/>
+                            <constraint firstItem="XUU-Vj-nJ9" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="UXd-hc-NIt"/>
                             <constraint firstItem="GbK-ks-cT8" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="VD2-iu-NTK"/>
-                            <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="XUU-Vj-nJ9" secondAttribute="trailing" constant="20" id="W3z-cK-WSV"/>
                             <constraint firstItem="7LH-oa-hDk" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="aeF-Jc-c4s"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="jfm-aj-XIx" secondAttribute="trailing" constant="20" id="c2L-4q-I7c"/>
                             <constraint firstItem="Bm2-5v-uMX" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="d4a-8r-EgI"/>
                             <constraint firstItem="HFf-xG-oWK" firstAttribute="top" secondItem="p2E-Dj-aDr" secondAttribute="bottom" constant="20" id="dHK-UQ-uwp"/>
                             <constraint firstItem="hQQ-IT-xDu" firstAttribute="top" secondItem="wvT-xb-lJC" secondAttribute="bottom" constant="20" id="dr9-Df-eO2"/>
+                            <constraint firstItem="d4L-1Z-fpw" firstAttribute="bottom" secondItem="XUU-Vj-nJ9" secondAttribute="bottom" constant="115" id="fom-mD-PlP"/>
                             <constraint firstItem="MF1-vB-AZW" firstAttribute="top" secondItem="GbK-ks-cT8" secondAttribute="bottom" constant="20" id="gIs-vr-IJw"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="xvA-xs-b7O" secondAttribute="trailing" constant="10" id="jCr-q3-QKL"/>
-                            <constraint firstItem="XUU-Vj-nJ9" firstAttribute="top" secondItem="d4L-1Z-fpw" secondAttribute="top" constant="10" id="jog-D1-6W4"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="hQQ-IT-xDu" secondAttribute="trailing" constant="20" id="k6q-lU-nTg"/>
                             <constraint firstItem="wvT-xb-lJC" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="kh7-rZ-7JL"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="7LH-oa-hDk" secondAttribute="trailing" constant="20" id="mS2-re-9Lk"/>
-                            <constraint firstItem="xvA-xs-b7O" firstAttribute="top" secondItem="XUU-Vj-nJ9" secondAttribute="bottom" constant="25" id="ofV-rj-Gs4"/>
+                            <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="XUU-Vj-nJ9" secondAttribute="trailing" constant="20" id="pNM-u7-keN"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="Bm2-5v-uMX" secondAttribute="trailing" constant="20" id="pSi-36-Oyl"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="wvT-xb-lJC" secondAttribute="trailing" constant="20" id="r83-xI-6gS"/>
                             <constraint firstItem="wvT-xb-lJC" firstAttribute="top" secondItem="6pL-qL-hR1" secondAttribute="bottom" constant="55" id="rtn-Q8-PVc"/>
                             <constraint firstItem="p2E-Dj-aDr" firstAttribute="top" secondItem="Jno-1e-g7c" secondAttribute="bottom" constant="20" id="tfI-bZ-lXB"/>
                             <constraint firstItem="d4L-1Z-fpw" firstAttribute="trailing" secondItem="HFf-xG-oWK" secondAttribute="trailing" constant="20" id="uBR-5Y-9CP"/>
-                            <constraint firstItem="XUU-Vj-nJ9" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="uIU-yj-gw9"/>
                             <constraint firstItem="hQQ-IT-xDu" firstAttribute="leading" secondItem="d4L-1Z-fpw" secondAttribute="leading" constant="20" id="uZM-69-vqf"/>
                             <constraint firstItem="7LH-oa-hDk" firstAttribute="top" secondItem="hQQ-IT-xDu" secondAttribute="bottom" constant="20" id="ylv-zk-ST2"/>
                             <constraint firstItem="jfm-aj-XIx" firstAttribute="top" secondItem="xvA-xs-b7O" secondAttribute="bottom" constant="20" id="z77-lV-BRC"/>
@@ -422,22 +422,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="apY-j4-ov3">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BVs-On-m6M">
+                                <rect key="frame" x="0.0" y="88" width="414" height="691"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="cfD-19-Z4e">
+                                    <size key="itemSize" width="414" height="691"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="artImageCell" id="zUC-A2-ikj" customClass="ArtImageCollectionViewCell" customModule="OpenCurate" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="691"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hSR-Cy-XYk">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="691"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9T2-pD-EzY">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="691"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="9T2-pD-EzY" firstAttribute="leading" secondItem="hSR-Cy-XYk" secondAttribute="leading" id="7QS-8b-043"/>
+                                                <constraint firstAttribute="bottom" secondItem="9T2-pD-EzY" secondAttribute="bottom" id="JT6-kl-HzP"/>
+                                                <constraint firstAttribute="trailing" secondItem="9T2-pD-EzY" secondAttribute="trailing" id="YbH-g3-VDK"/>
+                                                <constraint firstItem="9T2-pD-EzY" firstAttribute="top" secondItem="hSR-Cy-XYk" secondAttribute="top" id="fys-uP-A3D"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="414" height="691"/>
+                                        <connections>
+                                            <outlet property="artImage" destination="9T2-pD-EzY" id="IlA-Xc-Q7e"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="oXa-sX-m19">
+                                <rect key="frame" x="131" y="787" width="152" height="26"/>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="currentPageIndicatorTintColor" systemColor="systemOrangeColor"/>
+                            </pageControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7hV-vM-oAT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="apY-j4-ov3" firstAttribute="leading" secondItem="7hV-vM-oAT" secondAttribute="leading" id="Di3-QY-NlW"/>
-                            <constraint firstItem="apY-j4-ov3" firstAttribute="trailing" secondItem="7hV-vM-oAT" secondAttribute="trailing" id="Osb-sP-buX"/>
-                            <constraint firstItem="apY-j4-ov3" firstAttribute="top" secondItem="VGo-Re-u1W" secondAttribute="top" id="jsv-v6-OGS"/>
-                            <constraint firstAttribute="bottom" secondItem="apY-j4-ov3" secondAttribute="bottom" id="yZP-V7-ERt"/>
+                            <constraint firstItem="oXa-sX-m19" firstAttribute="top" secondItem="BVs-On-m6M" secondAttribute="bottom" constant="8" symbolic="YES" id="NQg-sP-7t5"/>
+                            <constraint firstItem="BVs-On-m6M" firstAttribute="leading" secondItem="7hV-vM-oAT" secondAttribute="leading" id="OOU-UG-Ngf"/>
+                            <constraint firstItem="BVs-On-m6M" firstAttribute="trailing" secondItem="7hV-vM-oAT" secondAttribute="trailing" id="Sik-a9-vQF"/>
+                            <constraint firstItem="7hV-vM-oAT" firstAttribute="bottom" secondItem="oXa-sX-m19" secondAttribute="bottom" id="ba6-hs-89a"/>
+                            <constraint firstItem="7hV-vM-oAT" firstAttribute="trailing" secondItem="oXa-sX-m19" secondAttribute="trailing" constant="131" id="bps-gg-Mq8"/>
+                            <constraint firstItem="oXa-sX-m19" firstAttribute="leading" secondItem="7hV-vM-oAT" secondAttribute="leading" constant="131" id="g7E-7i-3M2"/>
+                            <constraint firstItem="BVs-On-m6M" firstAttribute="top" secondItem="7hV-vM-oAT" secondAttribute="top" id="u3U-Pg-FNZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DwT-rB-1ur"/>
                     <connections>
-                        <outlet property="artImage" destination="apY-j4-ov3" id="mLD-Vx-CQa"/>
+                        <outlet property="collectionView" destination="BVs-On-m6M" id="PBT-Gi-rM8"/>
+                        <outlet property="pageControl" destination="oXa-sX-m19" id="6Bp-Sd-Xgv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B97-UH-p1P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
